--- a/src/components/default/Navbar.css
+++ b/src/components/default/Navbar.css
@@ -1,3 +1,14 @@
 .cursor-pointer{
-    cursor: pointer;    
+  cursor: pointer;    
+}
+.navbar{
+  margin-bottom: 50px;
+}
+
+header{
+  margin-bottom: 5em;
+}
+
+.container{
+  padding-bottom: 7em;
 }
